# aws-cost-audit

./: .gitignore  LICENSE  README.md  aws-cost-optimization-checklist.html  check_descriptions.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
aws_cost_audit/: __init__.py  cli.py
aws_cost_audit/checks/: __init__.py  cloudwatch_log_retention.py  cost_allocation_tags.py  dynamodb_underused.py  ebs_old_snapshots.py  ebs_unattached.py  ec2_previous_gen.py  ec2_rightsizing.py  ec2_unused.py  eip_unattached.py  elb_idle.py  lambda_unused.py  nat_gateway_unused.py  rds_idle.py  ri_coverage.py  s3_lifecycle.py
aws_cost_optimizer/: __init__.py  cli.py  models.py
aws_cost_optimizer/checks/: cloudwatch_log_retention.py  cost_allocation_tags.py  dynamodb_underused.py  ebs_old_snapshots.py  ebs_unattached.py  ec2_previous_gen.py  ec2_rightsizing.py  ec2_unused.py  eip_unattached.py  elb_idle.py  lambda_unused.py  nat_gateway_unused.py  rds_idle.py  ri_coverage.py  s3_lifecycle.py
