[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-cost-optimizer"
version = "0.1.0"
description = "CLI tool for AWS cost optimization checks"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Forrict", email = "hello@forrict.nl" }]
requires-python = ">=3.9"
dependencies = ["boto3>=1.34", "tabulate>=0.9"]
keywords = ["aws", "cost", "finops", "optimization", "cloud"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]

[project.scripts]
aws-cost-optimizer = "aws_cost_optimizer.cli:main"

[project.urls]
Homepage = "https://github.com/Forrict/aws-cost-optimizer"
Repository = "https://github.com/Forrict/aws-cost-optimizer"
Issues = "https://github.com/Forrict/aws-cost-optimizer/issues"

[project.optional-dependencies]
dev = ["ruff>=0.4", "mypy>=1.10", "boto3-stubs[ec2,s3,rds,cloudwatch,elbv2,lambda,dynamodb,logs,iam,ce]>=1.34"]

[tool.setuptools.packages.find]
where = ["."]
include = ["aws_cost_optimizer*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
