[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-cost-audit"
version = "0.1.0"
description = "CLI tool that audits your AWS account for common cost waste patterns"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Forrict", email = "hello@forrict.nl" }]
requires-python = ">=3.9"
dependencies = ["boto3>=1.34", "tabulate>=0.9"]
keywords = ["aws", "cost", "finops", "audit", "cloud"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]

[project.scripts]
aws-cost-audit = "aws_cost_audit.cli:main"

[project.urls]
Homepage = "https://github.com/Forrict/aws-cost-audit"
Repository = "https://github.com/Forrict/aws-cost-audit"
Issues = "https://github.com/Forrict/aws-cost-audit/issues"

[project.optional-dependencies]
dev = ["ruff>=0.4", "mypy>=1.10", "boto3-stubs[ec2,s3,rds,cloudwatch,elbv2,lambda,dynamodb,logs,iam,ce]>=1.34"]

[tool.setuptools.packages.find]
where = ["."]
include = ["aws_cost_audit*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
